Started on the boids simulation. Created the base javascript file. Created the simulation manager, handles the creation of the environment and the continually running of the simulation. Created the boid class, handles the boids behaviour (currently picks a random direction and moves in that direction constantly).

--- a/main.css
+++ b/main.css
@@ -14,6 +14,16 @@ header
     z-index: 999;
 }
 
+#boidsContainer
+{
+	position: absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height: 100%;
+	z-index: -1;
+}
+
 h1
 {
 	margin:0;
@@ -73,6 +83,18 @@ p
 {
 	padding-top: 60px;
 }
+
+.homeCard
+{
+	height: 100%;
+    background: rgba(0,0,0, 0.5);
+    width: 50%;
+    margin: auto;
+	padding: 32px 0;
+	color: white;
+	border-radius: 8px;
+}
+
 
 .card
 {
@@ -344,6 +366,12 @@ p
 		color:white;
 		background-color: transparent;
 	}
+
+	.homeCard
+	{
+		width:50%;
+	}
+	
 	.column
 	{
 		width: 95%;
@@ -387,6 +415,11 @@ p
 
 @media only screen and (max-width: 600px)
 {
+
+	.homeCard
+	{
+		width:100%;
+	}
 	.topNav a
 	{
 		font-size:12px;
